--- a/chapter6-librec.tex
+++ b/chapter6-librec.tex
@@ -1,5 +1,6 @@
 
 \chapter{Standardizing & automating Fairness related experiments}
+\label{librec-auto}
 
 \section{RecSys experimentation platforms}
 \section{librec-auto}
