--- a/mythesis.tex
+++ b/mythesis.tex
@@ -1,8 +1,10 @@
-\documentclass[defaultstyle,11pt]{thesis}
+% \documentclass[defaultstyle,11pt,inlineh4]{thesis}
+\documentclass[11pt,openany,oneside]{book}
 
 \usepackage{amssymb}		% to get all AMS symbols
 \usepackage{graphicx}		% to insert figures
 \usepackage{hyperref}		% PDF hyperreferences??
+\usepackage{todonotes}
 
 %%%%%%%%%%%%   All the preamble material:   %%%%%%%%%%%%
 
@@ -65,7 +67,7 @@
 \begin{document}
 
 \input macros.tex
-\input chapter1.tex
+\input chapter1-intro.tex
 \input chapter2.tex
 \input chapter3.tex
 \input chapter4.tex
